# serializer version: 1
# name: test_text_entities[text.party_mode_plugin_party_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <TextEntityCapabilityAttribute.MAX: 'max'>: 255,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 0,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': None,
    'entity_id': 'text.party_mode_plugin_party_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Party Name',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Party Name',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'party_mode_party_name',
    'unique_id': 'party_instance_party_name',
    'unit_of_measurement': None,
  })
# ---
# name: test_text_entities[text.party_mode_plugin_party_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Party Mode Plugin Party Name',
      <TextEntityCapabilityAttribute.MAX: 'max'>: 255,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 0,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'text.party_mode_plugin_party_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Party',
  })
# ---
# name: test_text_entities[text.party_mode_plugin_qr_text-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <TextEntityCapabilityAttribute.MAX: 'max'>: 255,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 0,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.party_mode_plugin_qr_text',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'QR Text',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'QR Text',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'party_mode_qr_text',
    'unique_id': 'party_instance_qr_text',
    'unit_of_measurement': None,
  })
# ---
# name: test_text_entities[text.party_mode_plugin_qr_text-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Party Mode Plugin QR Text',
      <TextEntityCapabilityAttribute.MAX: 'max'>: 255,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 0,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'text.party_mode_plugin_qr_text',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'Scan to join',
  })
# ---
# name: test_text_entities[text.test_player_1_network_name-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': dict({
      <TextEntityCapabilityAttribute.MAX: 'max'>: 255,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 0,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'text',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'text.test_player_1_network_name',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Network name',
    'options': dict({
    }),
    'original_device_class': None,
    'original_icon': None,
    'original_name': 'Network name',
    'platform': 'music_assistant',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': 0,
    'translation_key': 'network_name',
    'unique_id': '00:00:00:00:00:01_network_name',
    'unit_of_measurement': None,
  })
# ---
# name: test_text_entities[text.test_player_1_network_name-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Test Player 1 Network name',
      <TextEntityCapabilityAttribute.MAX: 'max'>: 255,
      <TextEntityCapabilityAttribute.MIN: 'min'>: 0,
      <TextEntityCapabilityAttribute.MODE: 'mode'>: <TextMode.TEXT: 'text'>,
      <TextEntityCapabilityAttribute.PATTERN: 'pattern'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'text.test_player_1_network_name',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'receiver',
  })
# ---
